@@ -108,6 +108,7 @@ struct ata_print_options
   int set_wcache; // disable(-1), enable(1) write cache
   bool sct_wcache_reorder_get; // print write cache reordering status
   int sct_wcache_reorder_set; // disable(-1), enable(1) write cache reordering
+  bool sct_wcache_reorder_set_pers;
   bool sct_wcache_sct_get; // print SCT Feature Control of write cache status
   int sct_wcache_sct_set; // determined by ata set features command(1), force enable(2), force disable(3)
   bool sct_wcache_sct_set_pers; // persistent or volatile
@@ -149,6 +150,7 @@ struct ata_print_options
       get_security(false), set_security_freeze(false),
       get_wcache(false), set_wcache(0),
       sct_wcache_reorder_get(false), sct_wcache_reorder_set(0),
+      sct_wcache_reorder_set_pers(false),
       sct_wcache_sct_get(false), sct_wcache_sct_set(0),
       sct_wcache_sct_set_pers(false)
     { }
