@@ -2,6 +2,9 @@ $Id$
 
 2016-08-17  Song Liu  <songliubraving@fb.com>
 
+	ataprint.cpp, ataprint.h, smartctl.cpp, smartctl.8.in:
+	Add persistent option ',p' to '-s wcreorder,on|off' (ticket #726).
+
 	atacmds.cpp, atacmds.h, ataprint.cpp, ataprint.h, smartctl.cpp,
 	smartctl.8.in: Add ability to control ATA drive write cache through
 	SCT Feature control.  The new smartctl options are
